# trader-bot

./: .dockerignore  .env.example  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/context/: STACK.md  current-work.md  deployment.md  design-and-security.md  dev-testing.md  roadmap.md
.claude/memory/: decisions.md  index.md  progress.md
.github/workflows/: deploy.yml
monitoring/: prometheus.yml
monitoring/grafana/provisioning/dashboards/: provider.yml
primo-prompt/: CLAUDE.md  trading-bot-handoff-part2.md  trading-bot-handoff-part3.md  trading-bot-handoff-part4.md  trading-bot-handoff.md
scripts/: check_positions.py  emergency_flatten.py  export_tax_report.py
src/trading/: config.py  main.py
src/trading/broker/: client.py  market_data.py  orders.py
src/trading/db/: models.py  repository.py
src/trading/db/migrations/: env.py
src/trading/db/migrations/versions/: 0001_initial_schema.py
src/trading/features/: pipeline.py
src/trading/monitoring/: healthcheck.py
src/trading/notifications/: telegram.py
src/trading/reporting/: flex_query.py
src/trading/risk/: circuit_breaker.py  manager.py
src/trading/scheduler/: jobs.py
src/trading/strategy/: composer.py  interfaces.py  registry.py
src/trading/strategy/implementations/: ma_crossover.py
tests/: conftest.py
tests/unit/: test_position_sizer.py  test_risk_manager.py  test_signal_generator.py
