[project]
name = "trader-bot"
version = "0.1.0"
description = "Trading algoritmico automatizzato su Interactive Brokers"
requires-python = ">=3.12"
dependencies = [
    # IBKR
    "ib-async>=1.0.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    # Config
    "pydantic-settings>=2.5.0",
    # Scheduler — APScheduler 4.x ha API incompatibile: pin a <4.0
    "apscheduler>=3.10.0,<4.0",
    # Logging + alerting
    "loguru>=0.7.0",
    "python-telegram-bot>=20.0",
    # Data
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pyarrow>=14.0.0",
    "pandas-ta-classic",
    "yfinance>=0.2.36",
    "exchange-calendars>=4.5.0",
    "pytz>=2024.1",
    # Web / health check
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    # Monitoring
    "prometheus-client>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    # vectorbt: backtesting pre-live — dev only, non entra nel container di produzione
    "vectorbt",
]

[project.scripts]
trader-bot = "trading.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["trading"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
plugins = ["sqlalchemy.ext.mypy.plugin"]
